--- a/src/board/SINS/SINS.ioc
+++ b/src/board/SINS/SINS.ioc
@@ -1,4 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_12
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.master=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C2.I2C_Mode=I2C_Fast
@@ -7,45 +13,48 @@ IWDG.IPParameters=Prescaler
 IWDG.Prescaler=IWDG_PRESCALER_128
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=I2C1
-Mcu.IP1=I2C2
-Mcu.IP2=IWDG
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=RTC
-Mcu.IP6=SYS
-Mcu.IP7=USART2
-Mcu.IP8=USART3
-Mcu.IPNb=9
+Mcu.IP0=ADC1
+Mcu.IP1=I2C1
+Mcu.IP2=I2C2
+Mcu.IP3=IWDG
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=RTC
+Mcu.IP7=SYS
+Mcu.IP8=USART2
+Mcu.IP9=USART3
+Mcu.IPNb=10
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA10
-Mcu.Pin11=PA11
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PA15
-Mcu.Pin15=PC10
-Mcu.Pin16=PC11
-Mcu.Pin17=PD2
-Mcu.Pin18=PB3
-Mcu.Pin19=PB6
+Mcu.Pin10=PB10
+Mcu.Pin11=PB11
+Mcu.Pin12=PA10
+Mcu.Pin13=PA11
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PA15
+Mcu.Pin17=PC10
+Mcu.Pin18=PC11
+Mcu.Pin19=PD2
 Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PB7
-Mcu.Pin21=PB8
-Mcu.Pin22=PB9
-Mcu.Pin23=VP_IWDG_VS_IWDG
-Mcu.Pin24=VP_RTC_VS_RTC_Activate
-Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin20=PB3
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=PB8
+Mcu.Pin24=PB9
+Mcu.Pin25=VP_IWDG_VS_IWDG
+Mcu.Pin26=VP_RTC_VS_RTC_Activate
+Mcu.Pin27=VP_SYS_VS_Systick
 Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PB10
-Mcu.Pin9=PB11
-Mcu.PinsNb=26
+Mcu.Pin4=PC2
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -62,6 +71,8 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPIO_Input
 PA10.Locked=true
 PA10.Signal=GPIO_Output
 PA11.Locked=true
@@ -114,6 +125,8 @@ PC14-OSC32_IN.Mode=LSE-External-Clock-Source
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Clock-Source
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.Locked=true
+PC2.Signal=ADCx_IN12
 PD2.Locked=true
 PD2.Signal=S_TIM3_ETR
 PH0-OSC_IN.Mode=HSE-External-Clock-Source
@@ -184,6 +197,8 @@ RCC.VCOI2SOutputFreq_Value=288000000
 RCC.VCOInputFreq_Value=1500000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=144000000
+SH.ADCx_IN12.0=ADC1_IN12,IN12
+SH.ADCx_IN12.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2
