--- a/src/board/PAYLOAD/PAYLOAD.ioc
+++ b/src/board/PAYLOAD/PAYLOAD.ioc
@@ -1,32 +1,69 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.master=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Mode=I2C_Fast
 I2C1.IPParameters=I2C_Mode
+I2C2.I2C_Mode=I2C_Fast
+I2C2.IPParameters=I2C_Mode
+I2C3.I2C_Mode=I2C_Fast
+I2C3.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IPNb=4
+Mcu.IP0=ADC1
+Mcu.IP1=I2C1
+Mcu.IP2=I2C2
+Mcu.IP3=I2C3
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM3
+Mcu.IP8=UART4
+Mcu.IPNb=9
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin2=PA13
-Mcu.Pin3=PA14
-Mcu.Pin4=PA15
-Mcu.Pin5=PB3
-Mcu.Pin6=PB6
-Mcu.Pin7=PB7
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin10=PA7
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PB10
+Mcu.Pin14=PB11
+Mcu.Pin15=PC6
+Mcu.Pin16=PC9
+Mcu.Pin17=PA8
+Mcu.Pin18=PA9
+Mcu.Pin19=PA13
+Mcu.Pin2=PC2
+Mcu.Pin20=PA14
+Mcu.Pin21=PA15
+Mcu.Pin22=PC10
+Mcu.Pin23=PC11
+Mcu.Pin24=PD2
+Mcu.Pin25=PB5
+Mcu.Pin26=PB6
+Mcu.Pin27=PB7
+Mcu.Pin28=PB8
+Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin3=PC3
+Mcu.Pin30=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin4=PA0-WKUP
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA4
+Mcu.Pin9=PA6
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
-MxCube.Version=5.6.1
-MxDb.Version=DB.5.0.60
+MxCube.Version=6.1.1
+MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -38,20 +75,74 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA13.Mode=JTAG_4_pins
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=ADCx_IN0
+PA1.Locked=true
+PA1.Signal=ADCx_IN1
+PA13.Locked=true
+PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
-PA14.Mode=JTAG_4_pins
+PA14.Locked=true
+PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA15.Mode=JTAG_4_pins
-PA15.Signal=SYS_JTDI
-PB3.Mode=JTAG_4_pins
-PB3.Signal=SYS_JTDO-SWO
+PA15.Locked=true
+PA15.Signal=GPIO_Input
+PA2.Locked=true
+PA2.Signal=ADCx_IN2
+PA3.Locked=true
+PA3.Signal=ADCx_IN3
+PA4.Locked=true
+PA4.Signal=ADCx_IN4
+PA6.Locked=true
+PA6.Signal=GPIO_Output
+PA7.Locked=true
+PA7.Signal=GPIO_Output
+PA8.Locked=true
+PA8.Mode=I2C
+PA8.Signal=I2C3_SCL
+PA9.Locked=true
+PA9.Signal=GPIO_Output
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB10.Locked=true
+PB10.Mode=I2C
+PB10.Signal=I2C2_SCL
+PB11.Locked=true
+PB11.Mode=I2C
+PB11.Signal=I2C2_SDA
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
+PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PC10.Locked=true
+PC10.Mode=Asynchronous
+PC10.Signal=UART4_TX
+PC11.Locked=true
+PC11.Mode=Asynchronous
+PC11.Signal=UART4_RX
+PC2.Locked=true
+PC2.Signal=GPIO_Output
+PC3.Locked=true
+PC3.Signal=GPIO_Output
+PC6.Locked=true
+PC6.Signal=S_TIM3_CH1
+PC9.Locked=true
+PC9.Mode=I2C
+PC9.Signal=I2C3_SDA
+PD2.Locked=true
+PD2.Signal=S_TIM3_ETR
+PH0-OSC_IN.Locked=true
 PH0-OSC_IN.Mode=HSE-External-Clock-Source
 PH0-OSC_IN.Signal=RCC_OSC_IN
+PH1-OSC_OUT.Locked=true
 PH1-OSC_OUT.Mode=HSE-External-Clock-Source
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
@@ -77,11 +168,12 @@ ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=PAYLOAD.ioc
 ProjectManager.ProjectName=PAYLOAD
+ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_UART4_Init-UART4-false-HAL-true,9-MX_I2C3_Init-I2C3-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -116,7 +208,27 @@ RCC.VCOI2SOutputFreq_Value=329142857.14285713
 RCC.VCOInputFreq_Value=1714285.7142857143
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=164571428.57142857
+SH.ADCx_IN0.0=ADC1_IN0,IN0
+SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+SH.ADCx_IN1.ConfNb=1
+SH.ADCx_IN2.0=ADC1_IN2,IN2
+SH.ADCx_IN2.ConfNb=1
+SH.ADCx_IN3.0=ADC1_IN3,IN3
+SH.ADCx_IN3.ConfNb=1
+SH.ADCx_IN4.0=ADC1_IN4,IN4
+SH.ADCx_IN4.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,Input_Capture1_from_TI1
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_ETR.0=TIM3_ETR,TriggerSource_ETR
+SH.S_TIM3_ETR.ConfNb=1
+TIM3.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM3.IPParameters=Channel-Input_Capture1_from_TI1
+UART4.IPParameters=VirtualMode
+UART4.VirtualMode=Asynchronous
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM3_VS_ControllerModeClock.Mode=Clock Mode
+VP_TIM3_VS_ControllerModeClock.Signal=TIM3_VS_ControllerModeClock
 board=custom
 isbadioc=false
