--- a/src/board/PAYLOAD/PAYLOAD.ioc
+++ b/src/board/PAYLOAD/PAYLOAD.ioc
@@ -5,6 +5,51 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
+Dma.I2C1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.I2C1_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.I2C1_RX.1.Instance=DMA1_Stream0
+Dma.I2C1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_RX.1.Mode=DMA_NORMAL
+Dma.I2C1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C1_RX.1.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.I2C1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.I2C1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C1_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.I2C1_TX.0.Instance=DMA1_Stream6
+Dma.I2C1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_TX.0.Mode=DMA_NORMAL
+Dma.I2C1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C1_TX.0.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.I2C1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.I2C3_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.I2C3_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.I2C3_RX.3.Instance=DMA1_Stream2
+Dma.I2C3_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C3_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.I2C3_RX.3.Mode=DMA_NORMAL
+Dma.I2C3_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C3_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C3_RX.3.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.I2C3_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.I2C3_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C3_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.I2C3_TX.2.Instance=DMA1_Stream4
+Dma.I2C3_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C3_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.I2C3_TX.2.Mode=DMA_NORMAL
+Dma.I2C3_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C3_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C3_TX.2.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.I2C3_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=I2C1_TX
+Dma.Request1=I2C1_RX
+Dma.Request2=I2C3_TX
+Dma.Request3=I2C3_RX
+Dma.RequestsNb=4
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Mode=I2C_Fast
@@ -13,18 +58,24 @@ I2C2.I2C_Mode=I2C_Fast
 I2C2.IPParameters=I2C_Mode
 I2C3.I2C_Mode=I2C_Fast
 I2C3.IPParameters=I2C_Mode
+IWDG.IPParameters=Prescaler,Reload
+IWDG.Prescaler=IWDG_PRESCALER_128
+IWDG.Reload=0xfff
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
-Mcu.IP1=I2C1
-Mcu.IP2=I2C2
-Mcu.IP3=I2C3
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM3
-Mcu.IP8=UART4
-Mcu.IPNb=9
+Mcu.IP1=DMA
+Mcu.IP10=TIM3
+Mcu.IP11=UART4
+Mcu.IP2=I2C1
+Mcu.IP3=I2C2
+Mcu.IP4=I2C3
+Mcu.IP5=IWDG
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=RTC
+Mcu.IP9=SYS
+Mcu.IPNb=12
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -44,27 +95,34 @@ Mcu.Pin20=PA14
 Mcu.Pin21=PA15
 Mcu.Pin22=PC10
 Mcu.Pin23=PC11
-Mcu.Pin24=PD2
-Mcu.Pin25=PB5
-Mcu.Pin26=PB6
-Mcu.Pin27=PB7
-Mcu.Pin28=PB8
-Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin24=PC12
+Mcu.Pin25=PD2
+Mcu.Pin26=PB5
+Mcu.Pin27=PB6
+Mcu.Pin28=PB7
+Mcu.Pin29=PB8
 Mcu.Pin3=PC3
-Mcu.Pin30=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin30=VP_IWDG_VS_IWDG
+Mcu.Pin31=VP_RTC_VS_RTC_Activate
+Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin33=VP_TIM3_VS_ControllerModeClock
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA1
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA6
-Mcu.PinsNb=31
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=6.1.1
 MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -128,6 +186,11 @@ PC10.Signal=UART4_TX
 PC11.Locked=true
 PC11.Mode=Asynchronous
 PC11.Signal=UART4_RX
+PC12.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+PC12.GPIO_Label=LED_Pin
+PC12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PC12.Locked=true
+PC12.Signal=GPIO_Output
 PC2.Locked=true
 PC2.Signal=GPIO_Output
 PC3.Locked=true
@@ -173,7 +236,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_UART4_Init-UART4-false-HAL-true,9-MX_I2C3_Init-I2C3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_UART4_Init-UART4-false-HAL-true,9-MX_I2C3_Init-I2C3-false-HAL-true,10-MX_IWDG_Init-IWDG-false-HAL-true,11-MX_RTC_Init-RTC-false-LL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -208,6 +271,9 @@ RCC.VCOI2SOutputFreq_Value=329142857.14285713
 RCC.VCOInputFreq_Value=1714285.7142857143
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=164571428.57142857
+RTC.AsynchPrediv=127
+RTC.IPParameters=AsynchPrediv,SynchPrediv
+RTC.SynchPrediv=0x7fff
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN1.0=ADC1_IN1,IN1
@@ -226,6 +292,10 @@ TIM3.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-Input_Capture1_from_TI1
 UART4.IPParameters=VirtualMode
 UART4.VirtualMode=Asynchronous
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ControllerModeClock.Mode=Clock Mode
