Добавлен вызов основной функции в main

--- a/src/board/PAYLOAD/PAYLOAD.ioc
+++ b/src/board/PAYLOAD/PAYLOAD.ioc
@@ -66,7 +66,8 @@ Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
 Mcu.IP10=TIM3
-Mcu.IP11=UART4
+Mcu.IP11=TIM4
+Mcu.IP12=UART4
 Mcu.IP2=I2C1
 Mcu.IP3=I2C2
 Mcu.IP4=I2C3
@@ -75,7 +76,7 @@ Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=RTC
 Mcu.IP9=SYS
-Mcu.IPNb=12
+Mcu.IPNb=13
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -106,13 +107,14 @@ Mcu.Pin30=VP_IWDG_VS_IWDG
 Mcu.Pin31=VP_RTC_VS_RTC_Activate
 Mcu.Pin32=VP_SYS_VS_Systick
 Mcu.Pin33=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin34=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA1
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA6
-Mcu.PinsNb=34
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -290,6 +292,10 @@ SH.S_TIM3_ETR.0=TIM3_ETR,TriggerSource_ETR
 SH.S_TIM3_ETR.ConfNb=1
 TIM3.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-Input_Capture1_from_TI1
+TIM4.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM4.IPParameters=Prescaler,Period,ClockDivision
+TIM4.Period=1999
+TIM4.Prescaler=31999
 UART4.IPParameters=VirtualMode
 UART4.VirtualMode=Asynchronous
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
@@ -300,5 +306,7 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ControllerModeClock.Mode=Clock Mode
 VP_TIM3_VS_ControllerModeClock.Signal=TIM3_VS_ControllerModeClock
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
 isbadioc=false
