Настроен таймер для дозиметра. Выставлен адресс для общения с БКУ

--- a/src/board/PAYLOAD/PAYLOAD.ioc
+++ b/src/board/PAYLOAD/PAYLOAD.ioc
@@ -3,6 +3,7 @@ PH0-OSC_IN.Locked=true
 PB13.GPIOParameters=GPIO_Label
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PB10.Mode=I2C
+VP_ADC1_TempSens_Input.Mode=IN-TempSens
 PC12.Locked=true
 NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 RCC.PLLCLKFreq_Value=168000000
@@ -33,7 +34,6 @@ VP_TIM3_VS_ControllerModeClock.Mode=Clock Mode
 PC1.PinState=GPIO_PIN_SET
 PB13.Locked=true
 ProjectManager.ProjectBuild=false
-TIM3.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA8.Locked=true
 PA4.Locked=true
@@ -81,7 +81,7 @@ Dma.I2C3_RX.3.Priority=DMA_PRIORITY_VERY_HIGH
 ProjectManager.ProjectFileName=PAYLOAD.ioc
 ADC1.Rank-0\#ChannelRegularConversion=1
 PA15.GPIOParameters=GPIO_Label
-Mcu.PinsNb=44
+Mcu.PinsNb=45
 PC11.Locked=true
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
 PA9.GPIO_Label=SENS_CTRL_CO_2
@@ -96,6 +96,7 @@ UART4.VirtualMode=Asynchronous
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PA0-WKUP.Signal=ADCx_IN0
 PC3.GPIOParameters=PinState,GPIO_Label
+I2C2.OwnAddress=0x69
 PB8.GPIO_Label=VALVE_ON
 PA11.Locked=true
 PA15.Locked=true
@@ -110,23 +111,24 @@ Dma.I2C1_RX.1.Instance=DMA1_Stream0
 Dma.I2C1_RX.1.PeriphInc=DMA_PINC_DISABLE
 PB10.Signal=I2C2_SCL
 PB14.Signal=GPIO_Output
-Mcu.Pin40=VP_RTC_VS_RTC_Activate
-Mcu.Pin41=VP_SYS_VS_Systick
-Mcu.Pin42=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin40=VP_IWDG_VS_IWDG
+Mcu.Pin41=VP_RTC_VS_RTC_Activate
+Mcu.Pin44=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin42=VP_SYS_VS_Systick
 Dma.I2C1_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Mcu.Pin43=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM3_VS_ControllerModeClock
 ProjectManager.LastFirmware=true
 Mcu.Pin37=PB7
 Mcu.Pin38=PB8
 Mcu.Pin35=PB5
 Mcu.Pin36=PB6
 SH.ADCx_IN0.ConfNb=1
-Mcu.Pin39=VP_IWDG_VS_IWDG
+Mcu.Pin39=VP_ADC1_TempSens_Input
+VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 PC2.GPIOParameters=PinState,GPIO_Label
 Mcu.Pin30=PA15
 RCC.EthernetFreq_Value=168000000
 Mcu.Pin33=PC12
-TIM3.IPParameters=Channel-Input_Capture1_from_TI1
 Mcu.Pin34=PD2
 Mcu.Pin31=PC10
 RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
@@ -191,7 +193,7 @@ PC1.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Label
 Mcu.Family=STM32F4
 ProjectManager.MainLocation=Core/Src
-I2C2.IPParameters=I2C_Mode
+I2C2.IPParameters=I2C_Mode,OwnAddress
 Dma.I2C1_TX.0.Instance=DMA1_Stream6
 RCC.CortexFreq_Value=168000000
 ProjectManager.KeepUserCode=true
@@ -219,7 +221,7 @@ PB13.GPIO_Label=SENS_CTRL_NH3_2
 PB11.Signal=I2C2_SDA
 NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 ProjectManager.StackSize=0x400
-PC3.PinState=GPIO_PIN_SET
+PC3.PinState=GPIO_PIN_RESET
 PB5.GPIOParameters=GPIO_Label
 Dma.I2C2_RX.5.Priority=DMA_PRIORITY_LOW
 Mcu.IP4=I2C3
@@ -264,10 +266,10 @@ Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PC0
 Mcu.Pin5=PC1
 PA12.PinState=GPIO_PIN_SET
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
 I2C3.IPParameters=I2C_Mode
-RCC.HSE_VALUE=8000000
 Dma.I2C1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+RCC.HSE_VALUE=8000000
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.IP10=TIM3
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
@@ -283,7 +285,7 @@ PB7.Signal=I2C1_SDA
 PB8.Locked=true
 Dma.I2C2_RX.5.Instance=DMA1_Stream3
 SH.ADCx_IN0.0=ADC1_IN0,IN0
-SH.S_TIM3_CH1.0=TIM3_CH1,Input_Capture1_from_TI1
+SH.S_TIM3_CH1.0=TIM3_CH1
 Dma.I2C1_RX.1.Mode=DMA_NORMAL
 Dma.RequestsNb=6
 PB0.Locked=true
