Настроен таймер для дозиметра

--- a/src/board/PAYLOAD/PAYLOAD.ioc
+++ b/src/board/PAYLOAD/PAYLOAD.ioc
@@ -17,6 +17,7 @@ Dma.I2C2_RX.5.Mode=DMA_NORMAL
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 PC3.Locked=true
 RCC.RTCFreq_Value=32768
+TIM3.Slave_TriggerPolarity=TIM_TRIGGERPOLARITY_INVERTED
 PA6.GPIO_Label=SENS_CTRL_NO2_2
 PB13.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
@@ -81,11 +82,10 @@ Dma.I2C3_RX.3.Priority=DMA_PRIORITY_VERY_HIGH
 ProjectManager.ProjectFileName=PAYLOAD.ioc
 ADC1.Rank-0\#ChannelRegularConversion=1
 PA15.GPIOParameters=GPIO_Label
-Mcu.PinsNb=45
+Mcu.PinsNb=44
 PC11.Locked=true
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
 PA9.GPIO_Label=SENS_CTRL_CO_2
-PC6.Signal=S_TIM3_CH1
 PC2.Signal=GPIO_Output
 PA11.GPIO_Label=MICS_PWR
 PC12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
