Добавлены прерывания для i2c

--- a/src/board/PAYLOAD/PAYLOAD.ioc
+++ b/src/board/PAYLOAD/PAYLOAD.ioc
@@ -2,6 +2,7 @@
 PH0-OSC_IN.Locked=true
 PB13.GPIOParameters=GPIO_Label
 PH0-OSC_IN.Signal=RCC_OSC_IN
+NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PB10.Mode=I2C
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
 PC12.Locked=true
@@ -55,6 +56,7 @@ SH.ADCx_IN4.ConfNb=1
 PB6.Locked=true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 TIM4.Period=1999
+NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.HalAssertFull=false
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 VP_TIM3_VS_ControllerModeClock.Signal=TIM3_VS_ControllerModeClock
@@ -104,55 +106,55 @@ PB11.Mode=I2C
 PC12.PinState=GPIO_PIN_SET
 TIM4.IPParameters=Prescaler,Period,ClockDivision
 I2C1.I2C_Mode=I2C_Fast
-PC6.Locked=true
 PA9.Signal=GPIO_Output
 PB5.Locked=true
+NVIC.I2C2_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 Dma.I2C1_RX.1.Instance=DMA1_Stream0
 Dma.I2C1_RX.1.PeriphInc=DMA_PINC_DISABLE
 PB10.Signal=I2C2_SCL
 PB14.Signal=GPIO_Output
-Mcu.Pin40=VP_IWDG_VS_IWDG
-Mcu.Pin41=VP_RTC_VS_RTC_Activate
-Mcu.Pin44=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin42=VP_SYS_VS_Systick
+Mcu.Pin40=VP_RTC_VS_RTC_Activate
+Mcu.Pin41=VP_SYS_VS_Systick
+Mcu.Pin42=VP_TIM3_VS_ControllerModeClock
 Dma.I2C1_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Mcu.Pin43=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin43=VP_TIM4_VS_ClockSourceINT
 ProjectManager.LastFirmware=true
-Mcu.Pin37=PB7
-Mcu.Pin38=PB8
-Mcu.Pin35=PB5
-Mcu.Pin36=PB6
+Mcu.Pin37=PB8
+Mcu.Pin38=VP_ADC1_TempSens_Input
+Mcu.Pin35=PB6
+Mcu.Pin36=PB7
 SH.ADCx_IN0.ConfNb=1
-Mcu.Pin39=VP_ADC1_TempSens_Input
+Mcu.Pin39=VP_IWDG_VS_IWDG
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 PC2.GPIOParameters=PinState,GPIO_Label
-Mcu.Pin30=PA15
+Mcu.Pin30=PC10
 RCC.EthernetFreq_Value=168000000
-Mcu.Pin33=PC12
-Mcu.Pin34=PD2
-Mcu.Pin31=PC10
+Mcu.Pin33=PD2
+TIM3.IPParameters=Slave_TriggerPolarity
+Mcu.Pin34=PB5
+Mcu.Pin31=PC11
 RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
-Mcu.Pin32=PC11
+Mcu.Pin32=PC12
 SH.ADCx_IN4.0=ADC1_IN4,IN4
 PA9.Locked=true
 Dma.I2C3_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-Dma.I2C2_TX.4.Priority=DMA_PRIORITY_LOW
+Dma.I2C2_TX.4.Priority=DMA_PRIORITY_HIGH
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 IWDG.IPParameters=Prescaler,Reload
-Mcu.Pin26=PA11
-Mcu.Pin27=PA12
+Mcu.Pin26=PA12
+Mcu.Pin27=PA13
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PA8
+Mcu.Pin24=PA9
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PA9
-Mcu.Pin28=PA13
-Mcu.Pin29=PA14
+Mcu.Pin25=PA11
+Mcu.Pin28=PA14
+Mcu.Pin29=PA15
 PA4.Signal=ADCx_IN4
-Mcu.Pin22=PC6
+Mcu.Pin22=PC9
 PB5.Signal=GPIO_Output
-Mcu.Pin23=PC9
+Mcu.Pin23=PA8
 Mcu.Pin20=PB13
 ADC1.master=1
 PA3.Locked=true
@@ -171,7 +173,6 @@ Mcu.Pin13=PA6
 Mcu.Pin14=PA7
 Mcu.Pin19=PB12
 Dma.I2C3_RX.3.MemInc=DMA_MINC_ENABLE
-SH.S_TIM3_CH1.ConfNb=1
 ProjectManager.ComputerToolchain=false
 Dma.I2C2_RX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Mcu.Pin17=PB10
@@ -181,6 +182,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=PA3
 Dma.I2C1_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Mcu.Pin12=PA4
+NVIC.I2C3_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 Mcu.Pin10=PA2
 PC3.GPIO_Label=HEATER_PWR
 PA8.Mode=I2C
@@ -193,7 +195,7 @@ PC1.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Label
 Mcu.Family=STM32F4
 ProjectManager.MainLocation=Core/Src
-I2C2.IPParameters=I2C_Mode,OwnAddress
+I2C2.IPParameters=I2C_Mode,OwnAddress,ClockSpeed
 Dma.I2C1_TX.0.Instance=DMA1_Stream6
 RCC.CortexFreq_Value=168000000
 ProjectManager.KeepUserCode=true
@@ -223,11 +225,11 @@ NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 ProjectManager.StackSize=0x400
 PC3.PinState=GPIO_PIN_RESET
 PB5.GPIOParameters=GPIO_Label
-Dma.I2C2_RX.5.Priority=DMA_PRIORITY_LOW
+Dma.I2C2_RX.5.Priority=DMA_PRIORITY_HIGH
 Mcu.IP4=I2C3
 Mcu.IP5=IWDG
 RCC.FCLKCortexFreq_Value=168000000
-I2C1.IPParameters=I2C_Mode,DutyCycle
+I2C1.IPParameters=I2C_Mode,DutyCycle,ClockSpeed
 Mcu.IP2=I2C1
 Mcu.IP3=I2C2
 PA15.GPIO_Label=PPS_Input
@@ -236,6 +238,7 @@ PA12.Locked=true
 Mcu.IP1=DMA
 PA12.Signal=GPIO_Output
 Mcu.UserConstants=
+I2C1.ClockSpeed=200000
 PC1.GPIOParameters=PinState,GPIO_Label
 PB0.PinState=GPIO_PIN_SET
 RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_LSE
@@ -267,7 +270,7 @@ Mcu.Pin4=PC0
 Mcu.Pin5=PC1
 PA12.PinState=GPIO_PIN_SET
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-I2C3.IPParameters=I2C_Mode
+I2C3.IPParameters=I2C_Mode,ClockSpeed
 Dma.I2C1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 RCC.HSE_VALUE=8000000
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -275,6 +278,7 @@ Mcu.IP10=TIM3
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 Mcu.IP12=UART4
 Mcu.IP11=TIM4
+NVIC.I2C3_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 Dma.I2C3_RX.3.Direction=DMA_PERIPH_TO_MEMORY
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 RCC.VCOInputFreq_Value=2000000
@@ -285,7 +289,6 @@ PB7.Signal=I2C1_SDA
 PB8.Locked=true
 Dma.I2C2_RX.5.Instance=DMA1_Stream3
 SH.ADCx_IN0.0=ADC1_IN0,IN0
-SH.S_TIM3_CH1.0=TIM3_CH1
 Dma.I2C1_RX.1.Mode=DMA_NORMAL
 Dma.RequestsNb=6
 PB0.Locked=true
@@ -331,6 +334,7 @@ PB8.GPIOParameters=GPIO_Label
 UART4.IPParameters=VirtualMode,BaudRate,OverSampling
 ProjectManager.NoMain=false
 PC11.Signal=UART4_RX
+I2C3.ClockSpeed=200000
 PC10.Mode=Asynchronous
 ProjectManager.DefaultFWLocation=true
 PB12.Locked=true
@@ -363,6 +367,7 @@ MxCube.Version=6.2.1
 TIM4.ClockDivision=TIM_CLOCKDIVISION_DIV1
 SH.ADCx_IN2.ConfNb=1
 Dma.I2C2_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+I2C2.ClockSpeed=200000
 VP_SYS_VS_Systick.Mode=SysTick
 PC1.GPIO_Label=MS_EXT_PWR
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
@@ -389,6 +394,7 @@ Dma.I2C2_TX.4.Instance=DMA1_Stream7
 PB7.Mode=I2C
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 PA14.Signal=SYS_JTCK-SWCLK
+NVIC.I2C2_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.HSI_VALUE=16000000
 Dma.I2C3_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
 ADC1.NbrOfConversionFlag=1
