Зачатки имитаторов барометров

--- a/src/board/PAYLOAD/PAYLOAD.ioc
+++ b/src/board/PAYLOAD/PAYLOAD.ioc
@@ -29,6 +29,7 @@ I2C1.DutyCycle=I2C_DUTYCYCLE_2
 RCC.APB2TimFreq_Value=168000000
 Dma.I2C3_TX.2.Priority=DMA_PRIORITY_VERY_HIGH
 PB6.Signal=I2C1_SCL
+PC7.Signal=USART6_RX
 PB6.Mode=I2C
 RTC.IPParameters=AsynchPrediv,SynchPrediv
 PC3.Signal=GPIO_Output
@@ -84,10 +85,11 @@ Dma.I2C3_RX.3.Priority=DMA_PRIORITY_VERY_HIGH
 ProjectManager.ProjectFileName=PAYLOAD.ioc
 ADC1.Rank-0\#ChannelRegularConversion=1
 PA15.GPIOParameters=GPIO_Label
-Mcu.PinsNb=44
+Mcu.PinsNb=46
 PC11.Locked=true
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
 PA9.GPIO_Label=SENS_CTRL_CO_2
+PC6.Signal=USART6_TX
 PC2.Signal=GPIO_Output
 PA11.GPIO_Label=MICS_PWR
 PC12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
@@ -106,6 +108,7 @@ PB11.Mode=I2C
 PC12.PinState=GPIO_PIN_SET
 TIM4.IPParameters=Prescaler,Period,ClockDivision
 I2C1.I2C_Mode=I2C_Fast
+PC6.Mode=Asynchronous
 PA9.Signal=GPIO_Output
 PB5.Locked=true
 NVIC.I2C2_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -113,28 +116,30 @@ Dma.I2C1_RX.1.Instance=DMA1_Stream0
 Dma.I2C1_RX.1.PeriphInc=DMA_PINC_DISABLE
 PB10.Signal=I2C2_SCL
 PB14.Signal=GPIO_Output
-Mcu.Pin40=VP_RTC_VS_RTC_Activate
-Mcu.Pin41=VP_SYS_VS_Systick
-Mcu.Pin42=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin40=VP_ADC1_TempSens_Input
+Mcu.Pin41=VP_IWDG_VS_IWDG
+Mcu.Pin44=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin45=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin42=VP_RTC_VS_RTC_Activate
 Dma.I2C1_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Mcu.Pin43=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin43=VP_SYS_VS_Systick
 ProjectManager.LastFirmware=true
-Mcu.Pin37=PB8
-Mcu.Pin38=VP_ADC1_TempSens_Input
-Mcu.Pin35=PB6
-Mcu.Pin36=PB7
+Mcu.Pin37=PB6
+Mcu.Pin38=PB7
+Mcu.Pin35=PD2
+Mcu.Pin36=PB5
 SH.ADCx_IN0.ConfNb=1
-Mcu.Pin39=VP_IWDG_VS_IWDG
+Mcu.Pin39=PB8
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 PC2.GPIOParameters=PinState,GPIO_Label
-Mcu.Pin30=PC10
+Mcu.Pin30=PA14
 RCC.EthernetFreq_Value=168000000
-Mcu.Pin33=PD2
+Mcu.Pin33=PC11
 TIM3.IPParameters=Slave_TriggerPolarity
-Mcu.Pin34=PB5
-Mcu.Pin31=PC11
+Mcu.Pin34=PC12
+Mcu.Pin31=PA15
 RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
-Mcu.Pin32=PC12
+Mcu.Pin32=PC10
 SH.ADCx_IN4.0=ADC1_IN4,IN4
 PA9.Locked=true
 Dma.I2C3_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
@@ -143,18 +148,18 @@ Dma.I2C2_TX.4.Priority=DMA_PRIORITY_HIGH
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 IWDG.IPParameters=Prescaler,Reload
-Mcu.Pin26=PA12
-Mcu.Pin27=PA13
+Mcu.Pin26=PA9
+Mcu.Pin27=PA11
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PA9
+Mcu.Pin24=PC9
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PA11
-Mcu.Pin28=PA14
-Mcu.Pin29=PA15
+Mcu.Pin25=PA8
+Mcu.Pin28=PA12
+Mcu.Pin29=PA13
 PA4.Signal=ADCx_IN4
-Mcu.Pin22=PC9
+Mcu.Pin22=PC6
 PB5.Signal=GPIO_Output
-Mcu.Pin23=PA8
+Mcu.Pin23=PC7
 Mcu.Pin20=PB13
 ADC1.master=1
 PA3.Locked=true
@@ -222,6 +227,7 @@ PC1.Locked=true
 PB13.GPIO_Label=SENS_CTRL_NH3_2
 PB11.Signal=I2C2_SDA
 NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+USART6.Mode=MODE_RX
 ProjectManager.StackSize=0x400
 PC3.PinState=GPIO_PIN_RESET
 PB5.GPIOParameters=GPIO_Label
@@ -248,7 +254,7 @@ RCC.HCLKFreq_Value=168000000
 SH.ADCx_IN3.0=ADC1_IN3,IN3
 Dma.I2C1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.I2C2_RX.5.MemInc=DMA_MINC_ENABLE
-Mcu.IPNb=13
+Mcu.IPNb=14
 RCC.I2SClocksFreq_Value=192000000
 ProjectManager.PreviousToolchain=STM32CubeIDE
 RCC.VcooutputI2S=192000000
@@ -280,6 +286,7 @@ Mcu.IP12=UART4
 Mcu.IP11=TIM4
 NVIC.I2C3_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 Dma.I2C3_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Mcu.IP13=USART6
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 RCC.VCOInputFreq_Value=2000000
 PA14.Mode=Serial_Wire
@@ -301,6 +308,7 @@ PH1-OSC_OUT.Mode=HSE-External-Oscillator
 PA6.Signal=GPIO_Output
 PA7.Locked=true
 Dma.I2C2_RX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+USART6.VirtualMode=VM_ASYNC
 RCC.EnbaleCSS=true
 ProjectManager.ToolChainLocation=
 RCC.LSI_VALUE=32000
@@ -333,6 +341,7 @@ Dma.I2C2_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 PB8.GPIOParameters=GPIO_Label
 UART4.IPParameters=VirtualMode,BaudRate,OverSampling
 ProjectManager.NoMain=false
+USART6.IPParameters=VirtualMode,Mode
 PC11.Signal=UART4_RX
 I2C3.ClockSpeed=200000
 PC10.Mode=Asynchronous
@@ -343,6 +352,7 @@ PB10.Locked=true
 PA12.GPIO_Label=O2_PWR
 RCC.FamilyName=M
 PA0-WKUP.Locked=true
+NVIC.USART6_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PC12.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA13.Signal=SYS_JTMS-SWDIO
 Dma.I2C3_RX.3.PeriphInc=DMA_PINC_DISABLE
@@ -406,6 +416,7 @@ PB7.Locked=true
 PB8.Signal=GPIO_Output
 NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PC9.Signal=I2C3_SDA
+PC7.Mode=Asynchronous
 RCC.APB1Freq_Value=42000000
 PC12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB11.Locked=true
