Добавлено название для pps пина. Он подтянут к земле

--- a/src/board/PAYLOAD/PAYLOAD.ioc
+++ b/src/board/PAYLOAD/PAYLOAD.ioc
@@ -85,6 +85,7 @@ Dma.I2C2_RX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAl
 Dma.I2C3_RX.3.Priority=DMA_PRIORITY_VERY_HIGH
 ProjectManager.ProjectFileName=PAYLOAD.ioc
 ADC1.Rank-0\#ChannelRegularConversion=1
+PA15.GPIOParameters=GPIO_PuPd,GPIO_Label
 Mcu.PinsNb=46
 PC11.Locked=true
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
@@ -239,6 +240,7 @@ RCC.FCLKCortexFreq_Value=168000000
 I2C1.IPParameters=I2C_Mode,DutyCycle,ClockSpeed
 Mcu.IP2=I2C1
 Mcu.IP3=I2C2
+PA15.GPIO_Label=PPS_Input
 Mcu.IP0=ADC1
 PA12.Locked=true
 Mcu.IP1=DMA
@@ -411,6 +413,7 @@ ADC1.NbrOfConversionFlag=1
 SH.GPXTI15.0=GPIO_EXTI15
 RCC.PLLM=4
 RCC.PLLN=168
+PA15.GPIO_PuPd=GPIO_PULLDOWN
 Dma.I2C3_TX.2.Direction=DMA_MEMORY_TO_PERIPH
 IWDG.Prescaler=IWDG_PRESCALER_128
 PB7.Locked=true
