--- a/src/board/SINS/SINS.ioc
+++ b/src/board/SINS/SINS.ioc
@@ -11,9 +11,9 @@ NVIC.I2C1_EV_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F405RGTx
 PB10.Mode=I2C
+VP_ADC1_TempSens_Input.Mode=IN-TempSens
 PC10.Locked=true
 Dma.I2C1_TX.1.Mode=DMA_NORMAL
-ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 RCC.PLLCLKFreq_Value=168000000
 PC10.Signal=USART3_TX
 RCC.PLLQCLKFreq_Value=84000000
@@ -32,7 +32,6 @@ PC1.Locked=true
 PB11.Signal=I2C2_SDA
 PA2.GPIOParameters=GPIO_Label
 PinOutPanel.RotationAngle=0
-ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_12
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
 Dma.I2C1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
@@ -48,12 +47,10 @@ PA12.Locked=true
 Mcu.IP1=DMA
 PA12.Signal=GPIO_Output
 Mcu.UserConstants=ADC_TIMEOUT,100
-ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_9
 SH.S_TIM3_CH2.ConfNb=1
 PC1.GPIOParameters=GPIO_Label
 RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_LSE
 Mcu.ThirdPartyNb=0
-ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_5
 RCC.HCLKFreq_Value=168000000
 Mcu.IPNb=10
 RCC.I2SClocksFreq_Value=192000000
@@ -61,7 +58,6 @@ ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=168000000
 PB6.Signal=S_TIM4_CH1
 RCC.VcooutputI2S=192000000
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_4
 Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.I2C1_TX.1.PeriphInc=DMA_PINC_DISABLE
 Mcu.Pin6=PC2
@@ -91,11 +87,8 @@ SH.ADCx_IN14.ConfNb=1
 SH.ADCx_IN15.0=ADC1_IN15,IN15
 NVIC.SysTick_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
-ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 MxDb.Version=DB.6.0.21
-ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_10
 PB0.GPIOParameters=GPIO_Label
-ADC1.Rank-2\#ChannelRegularConversion=2
 PA1.GPIOParameters=GPIO_Label
 ProjectManager.BackupPrevious=false
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
@@ -151,34 +144,27 @@ PC4.Locked=true
 NVIC.DMA1_Stream0_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 PC5.Signal=ADCx_IN15
 SH.ADCx_IN9.ConfNb=1
-ADC1.Rank-6\#ChannelRegularConversion=6
 Dma.Request0=I2C1_RX
 NVIC.DMA1_Stream6_IRQn=true\:1\:0\:true\:false\:true\:false\:true
-ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 I2C2.I2C_Mode=I2C_Fast
 PA4.GPIO_Label=LDiod2
 PC2.GPIO_Label=LDiod4
 ProjectManager.CustomerFirmwarePackage=
 PC4.GPIOParameters=GPIO_Label
-ADC1.Rank-4\#ChannelRegularConversion=4
 PA3.Signal=USART2_RX
 PA2.Locked=true
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 Dma.I2C1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_15
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 SH.S_TIM4_CH1.ConfNb=1
 Dma.I2C1_RX.0.PeriphInc=DMA_PINC_DISABLE
 ProjectManager.ProjectFileName=SINS.ioc
 Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_8
-Mcu.PinsNb=34
-ADC1.Rank-10\#ChannelRegularConversion=10
+Mcu.PinsNb=35
 ProjectManager.NoMain=false
 PC11.Locked=true
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,master,ScanConvMode,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,NbrOfConversion
-ADC1.Rank-8\#ChannelRegularConversion=8
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,master,ScanConvMode,NbrOfConversion
 PC11.Signal=USART3_RX
 PC2.Signal=ADCx_IN12
 PC4.Signal=ADCx_IN14
@@ -194,11 +180,9 @@ PB10.Locked=true
 NVIC.USART2_IRQn=true\:1\:0\:true\:false\:true\:true\:false
 USART2.BaudRate=9600
 PA12.GPIO_Label=PWR_GPS
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 RCC.FamilyName=M
 PA0-WKUP.GPIO_Label=GPS_PPS_INPUT
 PA0-WKUP.Signal=GPXTI0
-ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_11
 PA0-WKUP.Locked=true
 PA3.Mode=Asynchronous
 PA13.Signal=SYS_JTMS-SWDIO
@@ -233,6 +217,7 @@ MxCube.Version=6.2.1
 Dma.I2C1_TX.1.MemInc=DMA_MINC_ENABLE
 PC2.GPIOParameters=GPIO_Label
 SH.ADCx_IN10.ConfNb=1
+VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 I2C2.ClockSpeed=100000
 Mcu.Pin30=PB8
 PC1.GPIO_Label=LDiod8
@@ -240,20 +225,19 @@ PA1.GPIO_Label=LDiod1
 VP_SYS_VS_Systick.Mode=SysTick
 RCC.EthernetFreq_Value=168000000
 SH.ADCx_IN12.ConfNb=1
-Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin33=VP_RTC_VS_RTC_Activate
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
+Mcu.Pin34=VP_SYS_VS_Systick
 SH.ADCx_IN15.ConfNb=1
 Mcu.Pin31=PB9
 RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
 SH.ADCx_IN4.0=ADC1_IN4,IN4
-Mcu.Pin32=VP_RTC_VS_RTC_Activate
+Mcu.Pin32=VP_ADC1_TempSens_Input
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 Dma.I2C1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 PA4.GPIOParameters=GPIO_Label
-ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 SH.ADCx_IN8.ConfNb=1
-ADC1.Rank-9\#ChannelRegularConversion=9
-ADC1.NbrOfConversion=10
+ADC1.NbrOfConversion=1
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
@@ -269,7 +253,6 @@ ProjectManager.UnderRoot=true
 Mcu.Pin25=PC10
 I2C1.OwnAddress=0x7A
 Mcu.IP8=USART2
-ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_14
 Mcu.IP9=USART3
 Mcu.Pin28=PB6
 Mcu.IP6=RTC
@@ -289,8 +272,6 @@ ADC1.master=1
 PA3.Locked=true
 Mcu.Pin21=PA11
 PA5.GPIO_Label=LDiod3
-ADC1.Rank-3\#ChannelRegularConversion=3
-ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 PC5.GPIO_Label=LDiod10
@@ -310,14 +291,12 @@ Mcu.Pin16=PC5
 Mcu.Pin13=PA6
 Mcu.Pin14=PA7
 Mcu.Pin19=PB10
-ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 SH.S_TIM3_CH1.ConfNb=1
 ProjectManager.ComputerToolchain=false
 Mcu.Pin17=PB0
 RCC.HSI_VALUE=16000000
 Mcu.Pin18=PB1
 SH.ADCx_IN5.0=ADC1_IN5,IN5
-ADC1.Rank-7\#ChannelRegularConversion=7
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 ADC1.NbrOfConversionFlag=1
 Mcu.Pin11=PA4
@@ -331,8 +310,6 @@ PA2.Mode=Asynchronous
 PB8.Signal=I2C1_SCL
 PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
 SH.ADCx_IN5.ConfNb=1
-ADC1.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
-ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 PD2.Signal=S_TIM3_ETR
 PA11.PinState=GPIO_PIN_SET
 RCC.APB1Freq_Value=42000000
@@ -340,7 +317,6 @@ PB0.Signal=ADCx_IN8
 Dma.I2C1_RX.0.Instance=DMA1_Stream0
 PC0.Locked=true
 PB11.Locked=true
-ADC1.Rank-5\#ChannelRegularConversion=5
 ProjectManager.DeviceId=STM32F405RGTx
 PC1.Signal=ADCx_IN11
 ProjectManager.LibraryCopy=1
